// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PricingTable > renders on a white background 1`] = `
<div>
  <div
    class="rounded-2xl p-6 border border-pca-grey-200 bg-pca-white dark:border-pca-grey-700 dark:bg-pca-grey-800"
  >
    <p
      class="antialiased font-inter text-xs text-pca-grey-600 dark:text-pca-grey-400 font-bold uppercase tracking-[0.16em]"
    >
      pencil case pro
    </p>
    <p
      class="flex items-baseline gap-2 mt-1.5"
    >
      <span
        class="antialiased font-inter text-5xl font-bold text-pca-grey-900 dark:text-white"
      >
        25 €
      </span>
      <span
        class="antialiased font-inter text-sm text-pca-grey-600 dark:text-pca-grey-400 font-medium"
      >
        / year
      </span>
    </p>
    <ul
      class="mt-4 flex flex-col gap-3"
    >
      <li
        class="flex items-center gap-2.5"
      >
        <span
          class="antialiased font-inter text-base font-normal text-pca-grey-900 dark:text-white flex shrink-0"
        >
          <svg
            aria-hidden="true"
            class="h-4.5 w-4.5"
            fill="transparent"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.5 12L10.5 15L16.5 9M22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </span>
        <span
          class="antialiased font-inter text-sm text-pca-grey-900 dark:text-white font-medium"
        >
          Unlimited docs
        </span>
      </li>
      <li
        class="flex items-center gap-2.5"
      >
        <span
          class="antialiased font-inter text-base font-normal text-pca-grey-900 dark:text-white flex shrink-0"
        >
          <svg
            aria-hidden="true"
            class="h-4.5 w-4.5"
            fill="transparent"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.5 12L10.5 15L16.5 9M22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </span>
        <span
          class="antialiased font-inter text-sm text-pca-grey-900 dark:text-white font-medium"
        >
          Hosted in the EU
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`PricingTable > renders plan, price, features and slots 1`] = `
<div>
  <div
    class="rounded-2xl p-6 bg-pca-yellow-500 shadow-lg shadow-pca-yellow-900/20 -rotate-1 transition-transform duration-300 ease-out hover:rotate-0 motion-reduce:transform-none motion-reduce:transition-none"
  >
    <p
      class="antialiased font-inter text-xs text-pca-yellow-900 dark:text-pca-yellow-900 font-bold uppercase tracking-[0.16em]"
    >
      pencil case pro
    </p>
    <p
      class="flex items-baseline gap-2 mt-1.5"
    >
      <span
        class="antialiased font-inter text-5xl font-bold text-pca-grey-900 dark:text-pca-grey-900"
      >
        25 €
      </span>
      <span
        class="antialiased font-inter text-sm text-pca-yellow-900 dark:text-pca-yellow-900 font-medium"
      >
        / year
      </span>
    </p>
    <ul
      class="mt-4 flex flex-col gap-3"
    >
      <li
        class="flex items-center gap-2.5"
      >
        <span
          class="antialiased font-inter text-base font-normal text-pca-grey-900 dark:text-pca-grey-900 flex shrink-0"
        >
          <svg
            aria-hidden="true"
            class="h-4.5 w-4.5"
            fill="transparent"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.5 12L10.5 15L16.5 9M22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </span>
        <span
          class="antialiased font-inter text-sm text-pca-grey-900 dark:text-pca-grey-900 font-medium"
        >
          Unlimited docs
        </span>
      </li>
      <li
        class="flex items-center gap-2.5"
      >
        <span
          class="antialiased font-inter text-base font-normal text-pca-grey-900 dark:text-pca-grey-900 flex shrink-0"
        >
          <svg
            aria-hidden="true"
            class="h-4.5 w-4.5"
            fill="transparent"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.5 12L10.5 15L16.5 9M22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12Z"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </span>
        <span
          class="antialiased font-inter text-sm text-pca-grey-900 dark:text-pca-grey-900 font-medium"
        >
          Hosted in the EU
        </span>
      </li>
    </ul>
    <div
      class="mt-5"
    >
      <button>
        Upgrade to Pro
      </button>
    </div>
    <p
      class="antialiased font-inter text-xs font-normal text-pca-yellow-900 dark:text-pca-yellow-900 text-center mt-3"
    >
      Secure checkout by Creem.
    </p>
  </div>
</div>
`;
